--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -134,7 +134,7 @@
   "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/2": "Монета 2",
   "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/3": "Монета 3",
   "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS": "Автоподбирание Монет",
-  "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS/TIP": "Автоматически собирает пользовательские и золотые монеты!",
+  "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS/TIP": "Автоматически собирает серебряные и золотые монеты!",
   "LEVEL/FRAME_STEPPER/DROPDOWN/BACK": "Кнопка Назад:",
   "LEVEL/FRAME_STEPPER/DROPDOWN/BACK/PRE": "Назад: ",
   "LEVEL/FRAME_STEPPER/DROPDOWN/PAUSE": "Кнопка Паузы:",
@@ -143,7 +143,7 @@
   "LEVEL/FRAME_STEPPER/DROPDOWN/STEP/PRE": "Шаг: ",
   "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER": "Пошаговые Кадры",
   "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Позволяет покадрово \"шагать\" вперёд и назад",
-  "LEVEL/HACK_0_PRACTICE_COMPLETE": "Прохождение Уровня С 0% В Практике",
+  "LEVEL/HACK_0_PRACTICE_COMPLETE": "Прохождение С 0% В Практике",
   "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Позволяет пройти уровень в обычном режиме если уровень был пройден с 0% в режиме практики",
   "LEVEL/HACK_ALL_MODES_PLATFORMER": "Все Виды Игры в Платформер",
   "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "Позволяет использовать все игровые виды в уровнях-платформерах",
