--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -11,8 +11,8 @@
   "NX/COLOUR/R/PRE": "R: ",
   "NX/COLOUR/RESET": "Сбросить Цвет",
   "HOME": "Mega Hack",
-  "HOME/LANGUAGE": "ru-RU",
-  "HOME/SEARCH": "Поиск",
+  "HOME/LANGUAGE": "Язык: ",
+  "HOME/SEARCH": "Поиск: ",
   "BYPASS": "Обход ограничений",
   "BYPASS/HACK_MAIN_LEVELS": "Основные Уровни",
   "BYPASS/HACK_MAIN_LEVELS/TIP": "Разблокировщик демонов в основных уровнях",
