--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -59,7 +59,7 @@
     "COSMETIC/HACK_NO_SHADERS/TIP": "Seviyelerdeki gölgelendiricileri kapatır",
     "COSMETIC/HACK_NO_SHAKE": "Sarsılmayı Kapat",
     "COSMETIC/HACK_NO_SHAKE/TIP": "Sarsma (shake) triggerlarını kapatır",
-    "COSMETIC/HACK_NO_TRAIL": "İzi Gizle",
+    "COSMETIC/HACK_NO_TRAIL": "İzi Kapat",
     "COSMETIC/HACK_NO_TRAIL/TIP": "İzi her zaman kapalı tutar",
     "COSMETIC/HACK_NO_WAVE_PULSE": "Wave Titreşimini Kapat",
     "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Wave titreşmesini kapatır",
@@ -130,11 +130,11 @@
     "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD/SUF": "ms",
     "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC": "Otomatik Müzik Senkronize",
     "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC/TIP": "Müziği bir desenkronizasyon'dan sonra düzeltir, yalnızca tek şarkıya sahip olan ve doğrusal olan seviyeleri destekler",
-    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/1": "1. Bozuk Para",
-    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/2": "2. Bozuk Para",
-    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/3": "3. Bozuk Para",
-    "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS": "Otomatik Bozuk Para Toplayıcısı",
-    "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS/TIP": "Otomatik olarak kullanıcı ve altın bozuk paraları (coin) toplar!",
+    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/1": "1. Altın",
+    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/2": "2. Altın",
+    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/3": "3. Altın",
+    "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS": "Otomatik Altın Toplayıcısı",
+    "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS/TIP": "Otomatik olarak kullanıcı ve ana seviye altınlarını (coin) toplar!",
     "LEVEL/FRAME_STEPPER/DROPDOWN/BACK": "Geri Kısayolu:",
     "LEVEL/FRAME_STEPPER/DROPDOWN/BACK/PRE": "Geri: ",
     "LEVEL/FRAME_STEPPER/DROPDOWN/PAUSE": "Durdurma Kısayolu:",
@@ -156,7 +156,7 @@
     "LEVEL/HACK_CONFIRM_FULL_RESET": "Tamamen Sıfırlamayı Onayla",
     "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "Seviyeyi tamamen sıfırlamadan önce onay gerektirir",
     "LEVEL/HACK_CONFIRM_NORMAL": "Normal Modunu Onayla",
-    "LEVEL/HACK_CONFIRM_NORMAL/TIP": "Pratik modundan çıkmadan önce",
+    "LEVEL/HACK_CONFIRM_NORMAL/TIP": "Pratik modundan çıkmadan önce onay gerektirir",
     "LEVEL/HACK_CONFIRM_PRACTICE": "Pratik Modunu Onayla",
     "LEVEL/HACK_CONFIRM_PRACTICE/TIP": "Pratik moduna girmeden önce onay gerektirir",
     "LEVEL/HACK_CONFIRM_RESET": "Sıfırlamayı Onayla",
