--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -205,9 +205,9 @@
     "LEVEL/NOCLIP_LIMITS/DROPDOWN/DEATH_LIMIT_ON": "Ölüm Sınırı Açık",
     "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS": "Noclip Sınırları",
     "LEVEL/NOCLIP_LIMITS/HACK_NOCLIP_LIMITS/TIP": "Oyuncuyu bir sınırı geçtiğinde öldürür, Noclip gerektirir",
-    "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Tohum:",
-    "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Tohum: ",
-    "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Rastgele Tohum",
+    "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed:",
+    "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed: ",
+    "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Rastgele Seed",
     "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Rastgele triggerları denemeler boyunca tutarlı yapar (pratik modu dahil)",
     "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Zaman (ms):",
     "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER/SUF": "ms",
