--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -16,7 +16,7 @@
     "BYPASS": "Baypas",
     "BYPASS/HACK_MAIN_LEVELS": "Ana Seviyeler",
     "BYPASS/HACK_MAIN_LEVELS/TIP": "Ana demon seviyelerinin kilidini açar",
-    "BYPASS/HACK_MUSIC_UNLOCKER": "Müzik Açıcı",
+    "BYPASS/HACK_MUSIC_UNLOCKER": "Müzik Kişiselleştiricisi",
     "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Özel pratik ve menü müziği eklemenize izin verir",
     "BYPASS/HACK_SLIDER_LIMIT": "Kaydırıcı Sınırı",
     "BYPASS/HACK_SLIDER_LIMIT/TIP": "Kaydırıcıları görünen sınırın ötesine kaydırmanızı sağlar",
