--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -17,7 +17,7 @@
     "BYPASS/HACK_MAIN_LEVELS": "Ana Seviyeler",
     "BYPASS/HACK_MAIN_LEVELS/TIP": "Ana demon seviyelerinin kilidini açar",
     "BYPASS/HACK_MUSIC_UNLOCKER": "Müzik Kişiselleştiricisi",
-    "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Özel pratik ve menü müziği eklemenize izin verir",
+    "BYPASS/HACK_MUSIC_UNLOCKER/TIP": "Özel alıştırma ve menü müziği eklemenize izin verir",
     "BYPASS/HACK_SLIDER_LIMIT": "Kaydırıcı Sınırı",
     "BYPASS/HACK_SLIDER_LIMIT/TIP": "Kaydırıcıları görünen sınırın ötesine kaydırmanızı sağlar",
     "BYPASS/HACK_TEXT_LENGTH": "Metin Uzunluğu",
@@ -45,8 +45,8 @@
     "COSMETIC/HACK_NO_CAMERA_ZOOM/TIP": "Kamerayı yakınlaştıran triggerları kapatır",
     "COSMETIC/HACK_NO_DEATH_EFFECT": "Ölüm Efektlerini Kapat",
     "COSMETIC/HACK_NO_DEATH_EFFECT/TIP": "Ölümdeki görsel efektleri kapatır",
-    "COSMETIC/HACK_NO_DO_NOT_FLIP": "Do Not Çevirmesini Kapat",
-    "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Geometry Dash'in Do Not ayarındaki deneme ve seviye tamamlanma yazılarının çevrilmesini durdurur",
+    "COSMETIC/HACK_NO_DO_NOT_FLIP": "No Do Not Flip",
+    "COSMETIC/HACK_NO_DO_NOT_FLIP/TIP": "Geometry Dash'in Do Not ayarındaki deneme ve seviye tamamlanma yazılarının çevrilmesini engeller",
     "COSMETIC/HACK_NO_PARTICLES": "Partikülleri Gizle",
     "COSMETIC/HACK_NO_PARTICLES/TIP": "Partikül sistemini devre dışı bırakır (çoğunluğunu)",
     "COSMETIC/HACK_NO_PORTAL_LIGHTNING": "Portal Şimşeğini Gizle",
@@ -114,7 +114,7 @@
     "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT": "Şu yüzde de sağırlığı kaldır:",
     "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/PRE": "Şu yüzde de sağırlığı kaldır: ",
     "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_AT/SUF": "% ",
-    "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_IN_PRACTICE": "Pratik Modunda Sağırlaştır",
+    "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_IN_PRACTICE": "Alıştırma Modunda Sağırlaştır",
     "LEVEL/AUTO_DEAFEN/DROPDOWN/DEAFEN_WITH_STARTPOS": "StartPos İle Sağırlaştır",
     "LEVEL/AUTO_DEAFEN/DROPDOWN/SHORTCUT": "Sağırlaştırma Kısayolu:",
     "LEVEL/AUTO_DEAFEN/DROPDOWN/SHORTCUT/PRE": "Şu yüzde de sağırlığı kaldır:",
@@ -130,11 +130,11 @@
     "LEVEL/AUTO_MUSIC_SYNC/DROPDOWN/THRESHOLD/SUF": "ms",
     "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC": "Otomatik Müzik Senkronize",
     "LEVEL/AUTO_MUSIC_SYNC/HACK_AUTO_MUSIC_SYNC/TIP": "Müziği bir desenkronizasyon'dan sonra düzeltir, yalnızca tek şarkıya sahip olan ve doğrusal olan seviyeleri destekler",
-    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/1": "1. Altın",
-    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/2": "2. Altın",
-    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/3": "3. Altın",
-    "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS": "Otomatik Altın Toplayıcısı",
-    "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS/TIP": "Otomatik olarak kullanıcı ve ana seviye altınlarını (coin) toplar!",
+    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/1": "1. Coin",
+    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/2": "2. Coin",
+    "LEVEL/AUTO_PICKUP_COINS/DROPDOWN/3": "3. Coin",
+    "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS": "Otomatik Coin Toplayıcısı",
+    "LEVEL/AUTO_PICKUP_COINS/HACK_AUTO_PICKUP_COINS/TIP": "Otomatik olarak kullanıcı ve ana seviye coinlerini toplar!",
     "LEVEL/FRAME_STEPPER/DROPDOWN/BACK": "Geri Kısayolu:",
     "LEVEL/FRAME_STEPPER/DROPDOWN/BACK/PRE": "Geri: ",
     "LEVEL/FRAME_STEPPER/DROPDOWN/PAUSE": "Durdurma Kısayolu:",
@@ -143,34 +143,34 @@
     "LEVEL/FRAME_STEPPER/DROPDOWN/STEP/PRE": "Yürüt: ",
     "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER": "Kare Yürütücü",
     "LEVEL/FRAME_STEPPER/HACK_FRAME_STEPPER/TIP": "Kare-kare ileri ve geri yürümeye izin verir",
-    "LEVEL/HACK_0_PRACTICE_COMPLETE": "%0 Pratik Mod Tamamlama",
-    "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Pratik modunda seviyeyi 1 deneme ile bitirirseniz seviyeyi tamamlar",
+    "LEVEL/HACK_0_PRACTICE_COMPLETE": "%0 Alıştırma Mod Tamamlama",
+    "LEVEL/HACK_0_PRACTICE_COMPLETE/TIP": "Alıştırma modunda seviyeyi 1 deneme ile bitirirseniz seviyeyi tamamlar",
     "LEVEL/HACK_ALL_MODES_PLATFORMER": "Platformer'da Tüm Oyun Modları",
     "LEVEL/HACK_ALL_MODES_PLATFORMER/TIP": "Platformer seviyelerinde tüm oyun modlarını etkinleştirir",
     "LEVEL/HACK_AUTO_SONG_DOWNLOAD": "Otomatik Şarkı İndirici",
     "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Seviye sayfasını açınca otomatik olarak şarkıları indirmeye başlar",
-    "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Çek Noktası Sınır Baypas",
-    "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50 çek nokta sınırını baypaslar",
-    "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Pratik Modda Bozuk Paraları Topla",
-    "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Pratik modunda bozuk paraların ve kullanıcı bozuk paraların (coin) toplanmasına izin verir. WEGFan tarafından yapıldı",
+    "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Sınır Baypas",
+    "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50 checkpoint sınırını baypaslar",
+    "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "Alıştırma Modunda Coinleri Topla",
+    "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "Alıştırma modunda ana seviye ve kullanıcı coinlerinin toplanmasına izin verir. WEGFan tarafından yapıldı",
     "LEVEL/HACK_CONFIRM_FULL_RESET": "Tamamen Sıfırlamayı Onayla",
     "LEVEL/HACK_CONFIRM_FULL_RESET/TIP": "Seviyeyi tamamen sıfırlamadan önce onay gerektirir",
     "LEVEL/HACK_CONFIRM_NORMAL": "Normal Modunu Onayla",
-    "LEVEL/HACK_CONFIRM_NORMAL/TIP": "Pratik modundan çıkmadan önce onay gerektirir",
-    "LEVEL/HACK_CONFIRM_PRACTICE": "Pratik Modunu Onayla",
-    "LEVEL/HACK_CONFIRM_PRACTICE/TIP": "Pratik moduna girmeden önce onay gerektirir",
+    "LEVEL/HACK_CONFIRM_NORMAL/TIP": "Alıştırma modundan çıkmadan önce onay gerektirir",
+    "LEVEL/HACK_CONFIRM_PRACTICE": "Alıştırma Modunu Onayla",
+    "LEVEL/HACK_CONFIRM_PRACTICE/TIP": "Alıştırma moduna girmeden önce onay gerektirir",
     "LEVEL/HACK_CONFIRM_RESET": "Sıfırlamayı Onayla",
     "LEVEL/HACK_CONFIRM_RESET/TIP": "Seviyeyi sıfırlamadan önce onay gerektirir",
     "LEVEL/HACK_FORCE_PLATFORMER": "Platformer Modunu Zorla",
     "LEVEL/HACK_FORCE_PLATFORMER/TIP": "Tüm seviyelerde platformer modunu etkinleştirir",
     "LEVEL/HACK_INSTANT_COMPLETE": "Anında Tamamla",
     "LEVEL/HACK_INSTANT_COMPLETE/TIP": "Oyuncuyu bir seviyenin sonuna doğru ışınlar",
-    "LEVEL/HACK_PRACTICE_BUG_FIX": "Pratik Hata Düzeltmesi",
-    "LEVEL/HACK_PRACTICE_BUG_FIX/TIP": "Oyuncunun pratik modunda hızını kaydedip geri getirir.",
+    "LEVEL/HACK_PRACTICE_BUG_FIX": "Alıştırma Hata Düzeltmesi",
+    "LEVEL/HACK_PRACTICE_BUG_FIX/TIP": "Oyuncunun alıştırma modunda hızını kaydedip geri getirir.",
     "LEVEL/HACK_PRACTICE_MUSIC": "Practice Music Sync'in Kilidini Aç",
-    "LEVEL/HACK_PRACTICE_MUSIC/TIP": "Geometry Dash'deki pratik modda seviyenin müziğini kullanmanızı sağlayan practice music sync ayarının kilidini açar",
-    "LEVEL/HACK_REPLAY_LAST_CHECKPOINT": "Son Çek Noktasından Tekrar Oyna",
-    "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Bir seviyeyi tamamladıktan sonra en son koyduğunuz pratik mod çek noktasından yeniden doğmanızı sağlar",
+    "LEVEL/HACK_PRACTICE_MUSIC/TIP": "Geometry Dash'deki alıştırma modunda seviyenin müziğini kullanmanızı sağlayan practice music sync ayarının kilidini açar",
+    "LEVEL/HACK_REPLAY_LAST_CHECKPOINT": "Son Checkpoint'ten Tekrar Oyna",
+    "LEVEL/HACK_REPLAY_LAST_CHECKPOINT/TIP": "Bir seviyeyi tamamladıktan sonra en son koyduğunuz alıştırma mod checkpointinden yeniden doğmanızı sağlar",
     "LEVEL/HACK_SHOW_HITBOXES_ON_DEATH": "Ölünce Vuruş Kutularını Göster",
     "LEVEL/HACK_SHOW_HITBOXES_ON_DEATH/TIP": "Yalnızca ölünce vuruş kutularını görselleştirir",
     "LEVEL/HACK_SHOW_LAYOUT": "Düzeni Göster",
@@ -189,7 +189,7 @@
     "LEVEL/JUMPSCARE/DROPDOWN/TIME_THRESHOLD": "Zaman Sınırı (sn):",
     "LEVEL/JUMPSCARE/DROPDOWN/TIME_THRESHOLD/PRE": "Zaman: ",
     "LEVEL/JUMPSCARE/DROPDOWN/TIME_THRESHOLD/SUF": "sn",
-    "LEVEL/JUMPSCARE/HACK_JUMPSCARE": "Korku Zıplaması",
+    "LEVEL/JUMPSCARE/HACK_JUMPSCARE": "Jumpscare",
     "LEVEL/JUMPSCARE/HACK_JUMPSCARE/TIP": "Bö",
     "LEVEL/NOCLIP/DROPDOWN/PLAYER_1": "1. Oyuncu",
     "LEVEL/NOCLIP/DROPDOWN/PLAYER_2": "2. Oyuncu",
@@ -208,7 +208,7 @@
     "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed:",
     "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed: ",
     "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Rastgele Seed",
-    "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Rastgele triggerları denemeler boyunca tutarlı yapar (pratik modu dahil)",
+    "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Rastgele triggerları denemeler boyunca tutarlı yapar (alıştırma modu dahil)",
     "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Zaman (ms):",
     "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER/SUF": "ms",
     "LEVEL/RESPAWN_TIME/HACK_RESPAWN_TIME": "Yeniden Doğma Zamanı",
